--- a/bittorrent-dht-crawler-frontend/Dockerfile
+++ b/bittorrent-dht-crawler-frontend/Dockerfile
@@ -17,5 +17,6 @@ RUN yarn build
 # Serve the app
 FROM nginx:1.23
 COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
