--- a/bittorrent-dht-crawler-frontend/package.json
+++ b/bittorrent-dht-crawler-frontend/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^19.0.0",
     "react-globe.gl": "^2.28.3",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1",
     "react-toastify": "^11.0.2",
     "react-tooltip": "^5.28.0",
     "recharts": "^2.15.0"
@@ -43,8 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
+    "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.17"
   }
 }
